<resources>
    <string name="app_name">Eorzean Info</string>

    <string name="search_character_name">Character Name</string>
    <string name="search_character_server">Server</string>
    <string name="search_data_centre_label">Data Centre</string>
    <string name="search_server_label">Server</string>
    <string name="search_search_button">Search</string>
    <string name="search_failed_search">Failed to search, please try again</string>
    <string name="search_no_characters_found">No characters found</string>

    <string name="first_launch_skip">Skip</string>
    <string name="first_launch_next">Next</string>
    <string name="first_launch_done">Done</string>
    <string name="first_launch_title_1">Title 1</string>
    <string name="first_launch_title_2">Title 2</string>
    <string name="first_launch_title_3">Title 3</string>
    <string name="first_launch_body_1">Body 1</string>
    <string name="first_launch_body_2">Body 2</string>
    <string name="first_launch_body_3">Body 3</string>

    <string name="select_character_title">Select Character</string>
    <string name="select_character_no_characters_found">No characters found, please add a character to begin</string>

    <string name="updating_currently_updating">Character details are currently updating…</string>

    <string name="character_details_section_config">Config</string>
    <string name="character_details_profile">Profile</string>
    <string name="character_details_achievements">Achievements</string>
    <string name="character_details_mounts">Mounts</string>
    <string name="character_details_minions">Minions</string>
    <string name="character_details_settings">Settings</string>
    <string name="character_details_switch_character">Switch Character</string>

    <string name="profile_name_title">Character Name:</string>
    <string name="profile_race_title">Race:</string>

    <string name="min_mounts_acquired">Acquired</string>
    <string name="min_mounts_not_acquired">Not Acquired</string>
    <string name="min_mounts_all">All</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <!-- Data Centres -->
    <string name="data_centre_any">Any</string>
    <string name="data_centre_elemental">Elemental</string>
    <string name="data_centre_gaia">Gaia</string>
    <string name="data_centre_mana">Mana</string>
    <string name="data_centre_aether">Aether</string>
    <string name="data_centre_primal">Primal</string>
    <string name="data_centre_chaos">Chaos</string>

    <!-- Elemental Servers -->
    <string name="server_elemental_aegis">Aegis</string>
    <string name="server_elemental_atomos">Atomos</string>
    <string name="server_elemental_carbuncle">Carbuncle</string>
    <string name="server_elemental_garuda">Garuda</string>
    <string name="server_elemental_gungnir">Gungnir</string>
    <string name="server_elemental_kujata">Kujata</string>
    <string name="server_elemental_ramuh">Ramuh</string>
    <string name="server_elemental_tonberry">Tonberry</string>
    <string name="server_elemental_typhon">Typhon</string>
    <string name="server_elemental_unicorn">Unicorn</string>

    <!-- Gaia Servers -->
    <string name="server_gaia_alexander">Alexander</string>
    <string name="server_gaia_bahamut">Bahamut</string>
    <string name="server_gaia_durandal">Durandal</string>
    <string name="server_gaia_fenrir">Fenrir</string>
    <string name="server_gaia_ifrit">Ifrit</string>
    <string name="server_gaia_ridill">Ridill</string>
    <string name="server_gaia_tiamat">Tiamat</string>
    <string name="server_gaia_ultima">Ultima</string>
    <string name="server_gaia_valefor">Valefor</string>
    <string name="server_gaia_yojimbo">Yojimbo</string>
    <string name="server_gaia_zeromus">Zeromus</string>

    <!-- Mana Servers -->
    <string name="server_mana_anima">Anima</string>
    <string name="server_mana_asura">Asura</string>
    <string name="server_mana_belias">Belias</string>
    <string name="server_mana_chocobo">Chocobo</string>
    <string name="server_mana_hades">Hades</string>
    <string name="server_mana_ixion">Ixion</string>
    <string name="server_mana_mandragora">Mandragora</string>
    <string name="server_mana_masamune">Masamune</string>
    <string name="server_mana_pandaemonium">Pandaemonium</string>
    <string name="server_mana_shinryu">Shinryu</string>
    <string name="server_mana_titan">Titan</string>

    <!-- Aether Servers -->
    <string name="server_aether_adamantoise">Adamantoise"</string>
    <string name="server_aether_balmung">Balmung"</string>
    <string name="server_aether_cactuar">Cactuar"</string>
    <string name="server_aether_coeurl">Coeurl"</string>
    <string name="server_aether_faerie">Faerie"</string>
    <string name="server_aether_gilgamesh">Gilgamesh"</string>
    <string name="server_aether_goblin">Goblin"</string>
    <string name="server_aether_jenova">Jenova"</string>
    <string name="server_aether_mateus">Mateus"</string>
    <string name="server_aether_midgardsormr">Midgardsormr"</string>
    <string name="server_aether_sargatanas">Sargatanas"</string>
    <string name="server_aether_siren">Siren"</string>
    <string name="server_aether_zalera">Zalera"</string>

    <!-- Primal Servers -->
    <string name="server_primal_behemoth">Behemoth"</string>
    <string name="server_primal_brynhildr">Brynhildr"</string>
    <string name="server_primal_diabolos">Diabolos"</string>
    <string name="server_primal_excalibur">Excalibur"</string>
    <string name="server_primal_exodus">Exodus"</string>
    <string name="server_primal_famfrit">Famfrit"</string>
    <string name="server_primal_hyperion">Hyperion"</string>
    <string name="server_primal_lamia">Lamia"</string>
    <string name="server_primal_leviathan">Leviathan"</string>
    <string name="server_primal_malboro">Malboro"</string>
    <string name="server_primal_ultros">Ultros"</string>

    <!-- Chaos Servers -->
    <string name="server_chaos_cerberus">Cerberus"</string>
    <string name="server_chaos_lich">Lich"</string>
    <string name="server_chaos_moogle">Moogle"</string>
    <string name="server_chaos_odin">Odin"</string>
    <string name="server_chaos_phoenix">Phoenix"</string>
    <string name="server_chaos_ragnarok">Ragnarok"</string>
    <string name="server_chaos_shiva">Shiva"</string>
    <string name="server_chaos_zodiark">Zodiark"</string>
</resources>
